--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: [DeFi & DAI LatinoAmerica DAO]
+description: [Una DAO para la gestion de Finanzas Descentralizadas Comunitarias]
