--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: [DeFi & DAI LatinoAmerica DAO]
+logo: [https://assets.coingecko.com/coins/images/9956/large/dai-multi-collateral-mcd.png?1574218774]
 description: [Una DAO para la gestion de Finanzas Descentralizadas Comunitarias]
