--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: [DeFi & DAI LatinoAmerica DAO]
-logo: [https://assets.coingecko.com/coins/images/9956/large/dai-multi-collateral-mcd.png?1574218774]
+logo: [https://blockchain-insight.ch/wp-content/uploads/2019/11/dsr-icon-1600x1000.png]
 description: [Una DAO para la gestion de Finanzas Descentralizadas Comunitarias]
