prueba opcion 2 logo

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: [DeFi & DAI LatinoAmerica DAO]
 description: [Una DAO para la gestion de Finanzas Descentralizadas Comunitarias]
-logo: [logo-dai.png]
+logo: [Makergrafik1.jpg]
